# SimulationWorld

./: .gitignore  Makefile  README.md  cli.py  command-hub.html  index.html  memory.db  nohup.out  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  script.js  styles.css
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/memory/: README.md
events/: __init__.py  special.py
scripts/memory/: backfill.py  seed.py
server/: index.py
server/db/migrations/: 0001_memory_core.sql  0002_memory_indexes.sql  0003_memory_vector.sql
server/src/: brain.py
server/src/memory/: chunker.py  config.py  embeddings.py  ids.py  integration.py  jobs.py  retriever.py  routes.py  schema.py  store.py  summarizer.py  tick_pipeline.py
server/test/: test_brain.py
sim/: __init__.py  config.py  time.py
sim/data/: Year2_daily_prices_with_wallets.csv  Year3_daily_prices_with_wallets.csv  Year4_daily_prices_with_wallets.csv  Year5_daily_prices_with_wallets.csv  Year_1__Fast_Growth___100k_Wallets_.csv  coin_prices.csv  households.yaml  people.yaml  relationships.yaml
sim/engines/: __init__.py  economy.py  rng.py  scheduler.py
sim/entities/: __init__.py  asset.py  business.py  person.py  relationship.py
sim/output/: __init__.py  render.py
sim/world/: __init__.py  choices.py  events.py  loaders.py  state.py
tests/: test_bootstrap.py  test_clock.py  test_renderer.py
tests/ui/: ambient-music.spec.js
ui-playground/: index.html  package-lock.json  package.json  vite.config.js
ui-playground/src/: main.js  style.css
(+28 files in other folders)
